[package]
name = "test_starling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.132", features=["derive"]}
serde_yaml = "0.8.23"
serde_json = "1.0.73"
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3.19"
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
chrono = {version = "0.4.19", features = ["serde"] }
clap = { version = "3.0.0-rc.9", features = ["derive", "env"] }
colored = "2"
itertools = "0.10.3"
